# checksums

./: checksums.cabal
src/: Adler32.hs  Hex.hs  Main.hs  Rsync.hs
test/: Main.hs
