name: checksums
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable checksums
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        bytestring -any,
        doctest -any,
        cryptohash -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Adler32
        Hex
    ghc-options: -ferror-spans

test-suite test-checksums
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        bytestring -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Adler32
        Hex
    ghc-options: -ferror-spans
